# blogopt

./: .env.example  .gitignore  README.md  app.json  package-lock.json  package.json
apps/web/: next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/app/: layout.tsx  page.tsx  styles.css
apps/web/src/app/api/agent/chat/: route.ts
apps/web/src/app/api/articles/: route.ts
apps/web/src/app/api/jobs/[id]/: route.ts
apps/web/src/app/api/jobs/[id]/export/: route.ts
apps/web/src/app/api/slack/commands/: route.ts
apps/web/src/app/jobs/[id]/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/app/write/: page.tsx
apps/web/src/components/: ArticleForms.tsx  BriefChat.tsx  CopyButton.tsx  JobProgress.tsx  SubmitButton.tsx
apps/web/src/lib/: env.ts  jobs.ts  security.ts  slack.ts  supabase.ts
apps/worker/: Procfile  pyproject.toml  requirements.txt
apps/worker/src/blogoptimizer_worker/: __init__.py  config.py  content.py  db.py  integrations.py  llm.py  main.py  models.py  pipeline.py
docs/: deployment.md  pipeline.md  slack.md
supabase/: config.toml
supabase/migrations/: 20260521195000_initial_blogoptimizer_schema.sql  20260521195500_internal_access_policies.sql  20260521211000_expand_job_statuses.sql
