[project]
name = "blogoptimizer-worker"
version = "0.1.0"
description = "SEO and GEO analysis worker for the P11creative Buzz optimizer."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.6",
  "httpx>=0.27.2",
  "openai>=1.54.0",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "supabase>=2.10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.7.4"
]

[tool.ruff]
line-length = 100
target-version = "py311"
